2022-05-24  Alex Kotov  <kotovalexarian@gmail.com>

	* src/multiboot2/info_is_valid.c: Fix division by zero
	* configure.ac: Test options made stable
	* configure.ac: Feature "bloat" made stable
	* src/: Use assertions everywhere (closes #14)

2022-02-10  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Normalize args

2022-02-02  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Generate position-independent code by default, disable with
	"--disable-pic"
	* configure.ac: "-Werror" by default, disable with "--disable-werror"

2022-02-01  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Generate headers conditionally depending on options
	* src/printf.c: Fix potential buffer overflow

2022-01-24  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/ntoa.h: Add func "kernaux_itoa"

2022-01-23  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/assert.h: Require semicolon after macros
	* include/kernaux/libc.h: Add funcs "atoi", "isdigit", "isspace"
	* include/kernaux/ntoa.h: Rename const "KERNAUX_ITOA_BUFFER_SIZE" to
	"KERNAUX_ITOA10_BUFFER_SIZE"
	* include/kernaux/ntoa.h: Add funcs "kernaux_utoa16" and "kernaux_itoa16"
	* include/kernaux/ntoa.h: Add consts "KERNAUX_UTOA10_BUFFER_SIZE" and
	"KERNAUX_UTOA16_BUFFER_SIZE"
	* include/kernaux/ntoa.h: Add func "kernaux_utoa"

2022-01-22  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.2.0 released

	* configure.ac: Made stable
	* include/kernaux/cmdline.h: Made stable

2022-01-22  Alex Kotov  <kotovalexarian@gmail.com>

	* README.md: Configuration options now follow semver
	* include/kernaux/assert.h: Do not allow to disable asserts and guards

2022-01-21  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Allow to disable unnecessary heavy binary data

2022-01-20  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/assert.h: Added unconditional assertion (panic)
	* include/kernaux/assert.h: Added guards for unconditional assertion (panic)