@@ -8,17 +8,17 @@ int main()
         const char *format = "s";
 
         struct KernAux_PrintfFmt_Spec spec = KernAux_PrintfFmt_Spec_create();
-        KernAux_PrintfFmt_Spec_eval_flags(&spec, &format);
-        if (KernAux_PrintfFmt_Spec_eval_width1(&spec, &format)) {
+        KernAux_PrintfFmt_Spec_parse_flags(&spec, &format);
+        if (KernAux_PrintfFmt_Spec_parse_width(&spec, &format)) {
             // Actually this line won't be executed.
-            KernAux_PrintfFmt_Spec_eval_width2(&spec, 0);
+            KernAux_PrintfFmt_Spec_set_width(&spec, 0);
         }
-        if (KernAux_PrintfFmt_Spec_eval_precision1(&spec, &format)) {
+        if (KernAux_PrintfFmt_Spec_parse_precision(&spec, &format)) {
             // Actually this line won't be executed.
-            KernAux_PrintfFmt_Spec_eval_precision2(&spec, 0);
+            KernAux_PrintfFmt_Spec_set_precision(&spec, 0);
         }
-        KernAux_PrintfFmt_Spec_eval_length(&spec, &format);
-        KernAux_PrintfFmt_Spec_eval_type(&spec, &format);
+        KernAux_PrintfFmt_Spec_parse_length(&spec, &format);
+        KernAux_PrintfFmt_Spec_parse_type(&spec, &format);
 
         assert(spec.flags == 0);
         assert(spec.width == 0);
@@ -31,17 +31,17 @@ int main()
         const char *format = "012.34f";
 
         struct KernAux_PrintfFmt_Spec spec = KernAux_PrintfFmt_Spec_create();
-        KernAux_PrintfFmt_Spec_eval_flags(&spec, &format);
-        if (KernAux_PrintfFmt_Spec_eval_width1(&spec, &format)) {
+        KernAux_PrintfFmt_Spec_parse_flags(&spec, &format);
+        if (KernAux_PrintfFmt_Spec_parse_width(&spec, &format)) {
             // Actually this line won't be executed.
-            KernAux_PrintfFmt_Spec_eval_width2(&spec, 0);
+            KernAux_PrintfFmt_Spec_set_width(&spec, 0);
         }
-        if (KernAux_PrintfFmt_Spec_eval_precision1(&spec, &format)) {
+        if (KernAux_PrintfFmt_Spec_parse_precision(&spec, &format)) {
             // Actually this line won't be executed.
-            KernAux_PrintfFmt_Spec_eval_precision2(&spec, 0);
+            KernAux_PrintfFmt_Spec_set_precision(&spec, 0);
         }
-        KernAux_PrintfFmt_Spec_eval_length(&spec, &format);
-        KernAux_PrintfFmt_Spec_eval_type(&spec, &format);
+        KernAux_PrintfFmt_Spec_parse_length(&spec, &format);
+        KernAux_PrintfFmt_Spec_parse_type(&spec, &format);
 
         assert(
             spec.flags ==
@@ -60,15 +60,15 @@ int main()
         const char *format = " *.*ld";
 
         struct KernAux_PrintfFmt_Spec spec = KernAux_PrintfFmt_Spec_create();
-        KernAux_PrintfFmt_Spec_eval_flags(&spec, &format);
-        if (KernAux_PrintfFmt_Spec_eval_width1(&spec, &format)) {
-            KernAux_PrintfFmt_Spec_eval_width2(&spec, 12);
+        KernAux_PrintfFmt_Spec_parse_flags(&spec, &format);
+        if (KernAux_PrintfFmt_Spec_parse_width(&spec, &format)) {
+            KernAux_PrintfFmt_Spec_set_width(&spec, 12);
         }
-        if (KernAux_PrintfFmt_Spec_eval_precision1(&spec, &format)) {
-            KernAux_PrintfFmt_Spec_eval_precision2(&spec, 34);
+        if (KernAux_PrintfFmt_Spec_parse_precision(&spec, &format)) {
+            KernAux_PrintfFmt_Spec_set_precision(&spec, 34);
         }
-        KernAux_PrintfFmt_Spec_eval_length(&spec, &format);
-        KernAux_PrintfFmt_Spec_eval_type(&spec, &format);
+        KernAux_PrintfFmt_Spec_parse_length(&spec, &format);
+        KernAux_PrintfFmt_Spec_parse_type(&spec, &format);
 
         assert(
             spec.flags ==
