@@ -13,15 +13,15 @@ int main()
         const char *format = {{ escape_str(case.in.format) }};
 
         struct KernAux_PrintfFmt_Spec spec = KernAux_PrintfFmt_Spec_create();
-        KernAux_PrintfFmt_Spec_eval_flags(&spec, &format);
-        if (KernAux_PrintfFmt_Spec_eval_width1(&spec, &format)) {
-            KernAux_PrintfFmt_Spec_eval_width2(&spec, {{ none_to_zero(case.in.width) }});
+        KernAux_PrintfFmt_Spec_parse_flags(&spec, &format);
+        if (KernAux_PrintfFmt_Spec_parse_width(&spec, &format)) {
+            KernAux_PrintfFmt_Spec_set_width(&spec, {{ none_to_zero(case.in.width) }});
         }
-        if (KernAux_PrintfFmt_Spec_eval_precision1(&spec, &format)) {
-            KernAux_PrintfFmt_Spec_eval_precision2(&spec, {{ none_to_zero(case.in.precision) }});
+        if (KernAux_PrintfFmt_Spec_parse_precision(&spec, &format)) {
+            KernAux_PrintfFmt_Spec_set_precision(&spec, {{ none_to_zero(case.in.precision) }});
         }
-        KernAux_PrintfFmt_Spec_eval_length(&spec, &format);
-        KernAux_PrintfFmt_Spec_eval_type(&spec, &format);
+        KernAux_PrintfFmt_Spec_parse_length(&spec, &format);
+        KernAux_PrintfFmt_Spec_parse_type(&spec, &format);
 
         assert(spec.flags == {{ escape_flags(case.out.flags) }});
         assert(spec.width == {{ case.out.width }});
